Fix the beginsPattern regexp to match when the watch task restarts incremental compilation

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,7 @@
                 "background": {
                     "activeOnStart": true,
                     "beginsPattern": {
-                        "regexp": "^\\[\\s*\\d{1,2}:\\d{1,2}:\\d{1,2}(?: AM| PM)?\\] Starting compilation in watch mode\\.\\.\\."
+                        "regexp": "^\\[\\s*\\d{1,2}:\\d{1,2}:\\d{1,2}(?: AM| PM)?\\](?: Starting compilation in watch mode\\.\\.\\.| File change detected\\. Starting incremental compilation\\.\\.\\.)?"
                     },
                     "endsPattern": {
                         "regexp": "^\\[\\s*\\d{1,2}:\\d{1,2}:\\d{1,2}(?: AM| PM)?\\] (.*)Watching for file changes\\."
