Update tasks.json for filing an issue

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,10 +8,10 @@
             "type": "npm",
             "script": "watch",
             "problemMatcher": {
-                // "owner": "typescript",
-                "owner": "erin",
-                // "base": "$tsc-watch",
+                "owner": "nottypescript",
+                "base": "$tsc-watch",
                 "applyTo": "allDocuments",
+                "source": "EG",
                 "background": {
                     "activeOnStart": true,
                     "beginsPattern": {
